# evidence-seeker-platform

./: .env.example  .gitignore  LICENSE  PROJECT_SPEC.md  README.md  backend_resilience_spec.md  bug-report-context.md  deployment-protocol-2025-10-01  deployment.md  docker-compose.dev.yml  docker-compose.prod.yml.example  docker-compose.yml  email_verification_implementation_plan.md  embeddings-bug-report.md  evidence-seeker-configuration-document-upload.md  evidence-seeker-configuration.md  evidence-seeker-integration.md  evidence-seeker-logo.afdesign  evidence-seeker-setup.md  fact-check-run-publication.md  fact-check-runs-v2.md  fact-checking-flow.md  fix-fact-check-timeout.md  frontend_access_control_implementation_plan.md  implementation_plan.md  mypy-ci-fixes.md  package-lock.json  package.json  pgvector-llamaindex-tutorial.md  public-pages.md  security-improvements.md  test_retriever.ipynb  upload_feature_implementation_plan.md  wizard-fixes.md
.github/: copilot-instructions.md
.github/workflows/: ci.yml  deploy.yml  registry-cleanup.yml
backend/: Dockerfile  README.md  alembic.ini  build_index.ipynb  encryption_key  fix_document_data.py  init_db.py  pyproject.toml  requirements.txt  retriever_new_features.ipynb  test_email.py
backend/alembic/: env.py
backend/alembic/versions/: 1f5a9e2b4c7d_evse_library_integration.py  386798d9f88d_add_evidenceseeker_document_and_.py  3a5edc6f8c9b_add_document_source_url.py  5fb9f1a0d7b3_add_embed_backend_fields_to_settings.py  7c237c345803_add_original_filename_field_to_.py  aa84b0fa3c0c_add_language_column_to_evidence_seekers.py  d1f4d7c5c8d5_add_onboarding_token_fields.py  d6d80682c265_add_embedding_and_api_key_tables_with_.py
backend/app/: main.py
backend/app/api/: auth.py  config.py  documents.py  embeddings.py  evidence_seekers.py  permissions.py  progress.py  public.py  search.py  users.py
backend/app/core/: auth.py  bootstrap.py  config.py  config_service.py  database.py  email_service.py  embedding_service.py  evidence_seeker_config_service.py  evidence_seeker_index_service.py  evidence_seeker_pipeline.py  file_utils.py  logging.py  onboarding_tokens.py  permissions.py  progress_tracker.py  rate_limiter.py  vector_search.py  warmup.py
backend/app/models/: __init__.py  api_key.py  document.py  embedding.py  evidence_seeker.py  evidence_seeker_settings.py  fact_check.py  game.py  index_job.py  permission.py  user.py
backend/app/schemas/: api_key.py  document.py  evidence_seeker.py  evidence_seeker_settings.py  fact_check.py  index_job.py  permission.py  public.py  search.py  user.py
backend/app/scripts/: warmup_pipelines.py
backend/app/templates/email/: reset_password.html  reset_password.txt  verify_email.html  verify_email.txt
backend/scripts/: test-local.sh  test_email.py
backend/tests/: conftest.py  test_auth.py  test_bootstrap.py  test_document_permissions.py  test_evidence_seeker_config_service.py  test_evidence_seeker_permissions.py  test_permissions.py  test_public_api.py
frontend/: .eslintrc.cjs  Dockerfile  Dockerfile.dev  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts  vitest.setup.ts
frontend/src/: App.tsx  index.css
frontend/src/__tests__/: App.test.tsx
frontend/src/components/: ErrorBoundary.tsx  Logo.tsx  PageLayout.README.md  PageLayout.tsx  PermissionGuard.tsx
frontend/src/components/Auth/: AuthLayout.tsx  EmailVerification.tsx  ForgotPassword.tsx  LoginForm.tsx  ReauthModal.tsx  RegisterForm.tsx  ResetPassword.tsx
frontend/src/components/Config/: APIKeyManager.tsx
frontend/src/components/Configuration/: ConfigurationBlockedNotice.tsx  ConfigurationStatusBadge.tsx
frontend/src/components/Document/: DocumentList.tsx  DocumentUpload.tsx  UploadError.tsx  UploadForm.tsx  UploadProgress.tsx  UploadSuccess.tsx
frontend/src/components/Error/: AccessDeniedMessage.tsx  AuthRequiredMessage.tsx
frontend/src/components/EvidenceSeeker/: EvidenceSeekerConfig.tsx  EvidenceSeekerFactChecks.tsx  EvidenceSeekerForm.tsx  EvidenceSeekerList.tsx  EvidenceSeekerManagement.tsx  EvidenceSeekerManagementWrapper.tsx  EvidenceSeekerRunForm.tsx  EvidenceSeekerSettings.tsx  EvidenceSeekerSettingsAndConfig.tsx  UserRoleManager.tsx
frontend/src/components/EvidenceSeeker/Wizard/: WizardDocumentStep.tsx
frontend/src/components/FactCheck/: FactCheckRunDetailView.tsx
frontend/src/components/Platform/: AccessControlSettings.tsx  PlatformConfiguration.tsx  UserManagement.tsx
frontend/src/components/Progress/: ProgressIndicator.tsx
frontend/src/components/Public/: EvidenceSeekerCard.tsx  FactCheckSummaryCard.tsx  PublicLayout.tsx
frontend/src/components/Search/: SearchInterface.tsx
frontend/src/components/User/: RoleAssignmentForm.tsx  UserSearch.tsx
frontend/src/constants/: languages.ts
frontend/src/context/: AuthContext.tsx
frontend/src/hooks/: useConfig.ts  useConfigurationStatus.ts  useDocument.ts  useDocumentUploadController.ts  useEmbedding.ts  useEvidenceSeeker.ts  useEvidenceSeekerRuns.ts  useEvidenceSeekerSettings.ts  useIndexJobs.ts  usePermissions.ts  useSearch.ts  useUserManagement.ts
frontend/src/pages/: PlatformSettings.tsx
frontend/src/pages/app/: AdminFactCheckRunPage.tsx
frontend/src/pages/public/: PublicEvidenceSeekerPage.tsx  PublicFactCheckPage.tsx  PublicHomePage.tsx
frontend/src/types/: auth.ts  config.ts  document.ts  embedding.ts  evidenceSeeker.ts  factCheck.ts  indexJob.ts  luxon.d.ts  permission.ts  public.ts  search.ts  user.ts
frontend/src/utils/: api.ts  authEvents.ts  dates.ts  factCheckSummaries.ts
nginx/: prod.conf
scripts/: certbot-post-renew.sh  dev.js  update-action-sha.sh
